# mchem_tools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: docs-gh-pages.yml  tests.yml
docs/: Makefile  README.md  conf.py  db_format.rst  example_usage.rst  index.rst  trjconv.rst
docs/api/: index.rst  mchem.rst
examples/: ace_ala_nme_water.db  basic.py
mchem/: amoeba.py  element.py  main.py  solvate.py  system.py  template.py  topology.py  trjconv.py  units.py
mchem/fileformats/: __init__.py  pdb.py
mchem/forcefield/: __init__.py  amoebabio18_solvate.xml  base.py  generators.py  mbucb.xml
mchem/jaximpl/: multipole.py  vdw.py
mchem/templates/: ions.xml  protein.xml  protein_cter.xml  water.xml
mchem/templates/amber14/: protein.xml
mchem/templates/amber19/: protein.xml
mchem/templates/amoeba/: protein.xml  protein_nter.xml
mchem/terms/: __init__.py  base.py  bonded.py  nonbonded.py
tests/: __init__.py  amoeba_dhfr_energy.py  amoebabio18.prm  test_forcefield.py  test_jaximpl.py  test_mbucb.py  test_pdb.py  test_save_db.py  test_solvate.py  test_system.py  test_template.py  test_topology.py  test_trjconv.py
tests/data/: ace_nme_water.db  dhfr_amoeba_energy.json  output.db  solvate_ace_ala_nme_openmm.py  water216.xyz
tests/generate_hdf5/: aladi_water_box.db  aladi_water_box_md.in  aladi_water_box_md.out  md_traj_1.h5  md_traj_format.md  topology.h5
